# video-translate-pro

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FFMPEG_SOURCE_OFFER.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  THIRD_PARTY_NOTICES.md  app.py  desktop.py  ptts_fallback.py  pyproject.toml  requirements.txt  run.sh  utils.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  security.yml
docs/superpowers/plans/: 2026-07-01-pluggable-engines-phase-a.md
docs/superpowers/specs/: 2026-07-01-cross-platform-cli-design.md  2026-07-01-pluggable-engines-design.md  2026-07-01-pluggable-engines-phase-b.md
scratch/: test_tts.py
static/css/: style.css
static/js/: main.js
templates/: index.html
tests/: conftest.py  test_config.py  test_ffmpeg.py  test_filenames.py  test_media_parse.py  test_pipeline_transcribe.py  test_providers_asr.py  test_providers_translate.py  test_providers_tts.py  test_subtitles.py  test_tts.py  test_web.py
translatedub/: __init__.py  cli.py  config.py  ffmpeg.py  filenames.py  pipeline.py
translatedub/core/: __init__.py  assemble.py  media.py  subtitles.py  transcribe.py  tts.py
translatedub/core/providers/: __init__.py  asr.py  base.py  translate.py  tts.py
translatedub/web/: __init__.py  server.py
translatedub/web/static/: icon.icns
translatedub/web/static/css/: style.css
translatedub/web/static/js/: main.js
translatedub/web/templates/: index.html
