[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "translatedub"
version = "0.2.0"
description = "Local-first, cross-platform video translation, subtitling and AI dubbing."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Phong Ho" }]
keywords = ["video", "translation", "subtitles", "dubbing", "tts", "gemini", "ffmpeg"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "google-genai>=0.3",
    "gTTS>=2.5",
    "pydub>=0.25",
    "imageio-ffmpeg>=0.4",
]

[project.optional-dependencies]
cloud = ["google-cloud-texttospeech>=2.16"]
dev = ["pytest>=8", "bandit>=1.7", "ruff>=0.4", "httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/Phong-EpicMind/video-translate-pro"
Repository = "https://github.com/Phong-EpicMind/video-translate-pro"
Issues = "https://github.com/Phong-EpicMind/video-translate-pro/issues"

[project.scripts]
translatedub = "translatedub.cli:main"

[tool.setuptools.packages.find]
include = ["translatedub*"]

[tool.setuptools.package-data]
"translatedub.web" = ["templates/*.html", "static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
